# cpp

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  math.cpp  math.cppm
lib2/: CMakeLists.txt  math2.cpp  math2.cppm
src/: CMakeLists.txt  main.cpp
src2/: CMakeLists.txt  main2.cpp
